--- a/src/index.css
+++ b/src/index.css
@@ -1034,94 +1034,108 @@ body.slide .oliven-nav-toggle {
     margin-bottom: 10px;
 }
 
-
-/* ======= Bride & Groom style ======= */
 .bridegroom .item {
-  padding: 30px;
-  border-radius: 0px;
-  background: #fff;
-  position: relative;
-  overflow: hidden;
-}
-.bridegroom .img {
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-  overflow: hidden;
-  float: left;
-}
-.bridegroom .info {
-  margin-left: 160px;
-}
-.bridegroom .info h6 {
+    padding: 30px;
+    border-radius: 20px; /* Change this value to make corners round */
+    background: #fff;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .bridegroom .img {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    overflow: hidden;
+    float: left;
+  }
+  
+  .bridegroom .info {
+    margin-left: 160px;
+  }
+  
+  .bridegroom .info h6 {
     font-size: 24px;
     margin-bottom: 5px;
-}
-.bridegroom .info h6 i {
+  }
+  
+  .bridegroom .info h6 i {
     color: #BD945A;
     font-size: 16px;
-}
-.bridegroom .info span {
-      color: #BD945A;
+  }
+  
+  .bridegroom .info span {
+    color: #BD945A;
     font-size: 24px;
     font-weight: 400;
     font-family: 'Alex Brush', cursive;
-}
-.bridegroom .info p {
+  }
+  
+  .bridegroom .info p {
     margin-top: 10px;
-}
-.bridegroom .info .social {
-  margin-top: 10px;
-}
-.bridegroom .info .social a {
-  text-align: center;
-  width: 35px;
-  height: 35px;
-  line-height: 35px;
-  border-radius: 50%;
-  border: 1px solid #eee;
-  color: #888;
-  margin-right: 10px;
-  font-size: 12px;
-}
-.bridegroom .info .social a:hover {
-  background-color: #BD945A;
-  border-color: #BD945A;
-  color: #fff;
-}
-.bridegroom .toright .img {
-  float: right;
-}
-.bridegroom .toright .info {
-  margin-left: 0;
-  margin-right: 160px;
-  text-align: right;
-}
-.bridegroom .toright .info .social a {
-  margin-right: 0;
-  margin-left: 10px;
-}
-
-@media screen and (max-width: 991px) {
-.bridegroom .img {
-    margin: auto;
-    float: none !important;
-}
-.bridegroom .info {
-    margin: 30px 0 0 0 !important;
-}
-    
-    .bridegroom .item, .bridegroom .toright .info {
+  }
+  
+  .bridegroom .info .social {
+    margin-top: 10px;
+  }
+  
+  .bridegroom .info .social a {
     text-align: center;
-}
-    
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    border-radius: 50%;
+    border: 1px solid #eee;
+    color: #888;
+    margin-right: 10px;
+    font-size: 12px;
+  }
+  
+  .bridegroom .info .social a:hover {
+    background-color: #BD945A;
+    border-color: #BD945A;
+    color: #fff;
+  }
+  
+  .bridegroom .toright .img {
+    float: right;
+  }
+  
+  .bridegroom .toright .info {
+    margin-left: 0;
+    margin-right: 160px;
+    text-align: right;
+  }
+  
+  .bridegroom .toright .info .social a {
+    margin-right: 0;
+    margin-left: 10px;
+  }
+  
+  @media screen and (max-width: 991px) {
+    .bridegroom .img {
+      margin: auto;
+      float: none !important;
+      border-radius: 20px; /* Change this value to make corners round */
     }
+  
+    .bridegroom .info {
+      margin: 30px 0 0 0 !important;
+    }
+  
+    .bridegroom .item,
+    .bridegroom .toright .info {
+      text-align: center;
+    }
+  }
+  
 
 
 /* ======= Wedding Countdown style ======= */
 #countdown {
     text-align: center;
     background-image: url(./assets/images/banner-1.jpg);
+    border-radius: 20px;
 }
 #countdown .section-head {
     margin-bottom: 15px;
@@ -1178,6 +1192,7 @@ body.slide .oliven-nav-toggle {
   #countdown li {
     font-size: 12px;
     padding: 15px;
+    border-radius: 20px;
   }
   #countdown li span {
     font-size: 60px;
@@ -1201,10 +1216,12 @@ body.slide .oliven-nav-toggle {
     left: 45px;
     bottom: 0;
     border: 10px solid #BD945A;
+    border-radius: 20px;
 }
 .story .story-img .img img {
     position: relative;
     z-index: 2;
+    border-radius: 20px;
 }
 .story .story-img:after {
     content: '';
@@ -1216,13 +1233,15 @@ body.slide .oliven-nav-toggle {
     /* background-image: url(../images/dots.png); */
     background-repeat: repeat;
     z-index: -1;
+    border-radius: 20px;
 }
 
 .story-img-2 {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    position: relative
+    position: relative;
+    border-radius: 20px;
 }
 
 .story-img .story-img-2 {
@@ -1233,6 +1252,7 @@ body.slide .oliven-nav-toggle {
     right: 45px;
     z-index: 3;
     background-image: url(./assets/images/wedding-logo.png);
+    border-radius: 20px;
 }
 
 /* story-wedding */
@@ -1257,6 +1277,7 @@ body.slide .oliven-nav-toggle {
     position: absolute;
     top: 40px;
     right: 45px;
+    border-radius: 20px;
 }
 }
 
@@ -1268,6 +1289,7 @@ body.slide .oliven-nav-toggle {
     position: absolute;
     top: 15px;
     right: 45px;
+    border-radius: 20px;
     }
 }
 
@@ -1276,6 +1298,7 @@ body.slide .oliven-nav-toggle {
 .organization .bord-box {
   overflow: hidden;
   background-image: url(./assets/images/slider.jpg);
+  border-radius: 20px;
 }
 .organization .item-box {
   padding: 60px 30px;
@@ -1335,12 +1358,14 @@ body.slide .oliven-nav-toggle {
 }
 .organization.item-box:hover .numb, .organization.item-box:hover .title {
       color: #fff; 
+   
 }
 
 
 /* ======= See You style ======= */
 .seeyou {
   background-image: url(./assets/images/banner-3.jpg);
+  border-radius: 20px;
 }
 .seeyou .section-head span {
     color: #fff;
@@ -1410,6 +1435,7 @@ body.slide .oliven-nav-toggle {
 .gallery-box .gallery-img>img {
     transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
     border-radius: 0;
+    border-radius: 20px;
 }
 .gallery-box .gallery-detail {
     opacity: 0;
@@ -1444,43 +1470,56 @@ body.slide .oliven-nav-toggle {
     transform: scale(1.05);
 }
 
-
 /* ===== When & Where style ===== */
 .whenwhere .item {
-
+    border-radius: 20px;
+    width: 400px; /* Set a fixed width */
+    margin: 10px auto; /* Center the box horizontally */
 }
+
 .whenwhere .item .whenwhere-img {
     position: relative;
     overflow: hidden;
 }
+
+/* Apply hover effect to the image */
 .whenwhere .item .whenwhere-img:hover img {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
 }
+
 .whenwhere .item .whenwhere-img img {
     -webkit-transition: all .5s;
     transition: all .5s;
+    border-radius: 20px;
 }
+
 .whenwhere .item .content {
-    padding: 20px 20px 30px 20px;
+    padding: 20px;
     background: #fff;
+    border-radius: 20px;
 }
+
 .whenwhere .item .content .tag a {
     color: #888;
     font-style: italic;
 }
+
 .whenwhere .item .content .tag a:hover {
     color: #BD945A;
 }
+
 .whenwhere .item .content h5 {
     font-size: 21px;
     margin-top: 10px;
     margin-bottom: 15px;
     text-transform: uppercase;
 }
+
 .whenwhere .item .content p i {
     color: #BD945A;
 }
+
 .whenwhere-entry {
     width: 100%;
     float: left;
@@ -1488,11 +1527,13 @@ body.slide .oliven-nav-toggle {
     margin-bottom: 60px;
     box-shadow: 0 25px 75px rgba(0, 0, 0, 0.05);
 }
+
 @media screen and (max-width: 768px) {
     .whenwhere-entry {
         margin-bottom: 45px;
     }
 }
+
 .whenwhere-entry .whenwhere-img {
     width: 100%;
     float: left;
@@ -1501,6 +1542,7 @@ body.slide .oliven-nav-toggle {
     z-index: 1;
     margin-bottom: 20px;
 }
+
 .whenwhere-entry .whenwhere-img img {
     position: relative;
     max-width: 100%;
@@ -1513,15 +1555,19 @@ body.slide .oliven-nav-toggle {
     -o-transition: 0.3s;
     transition: 0.3s;
 }
+
 .whenwhere-entry .desc {
     padding: 20px;
+    text-align: center; /* Center the content */
 }
+
 .whenwhere-entry .desc h3 {
     font-size: 24px;
     line-height: 1.2em;
     font-weight: 400;
     margin-bottom: 15px;
 }
+
 .whenwhere-entry .desc h3 a {
     color: #000;
     text-decoration: none;
@@ -1530,13 +1576,6 @@ body.slide .oliven-nav-toggle {
     font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 1px;
-}
-.whenwhere-entry:hover .whenwhere-img img {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
 }
 
 
@@ -1594,6 +1633,7 @@ body.slide .oliven-nav-toggle {
 /* ===== Footer style ===== */
 #rsvp {
     background-image: url(./assets/images/banner-2.jpg);
+    border-radius: 20px;
 }
 .footer2 {
     padding: 90px 30px;
@@ -1602,6 +1642,7 @@ body.slide .oliven-nav-toggle {
 .footer2 img { 
     width: 90px;
     margin-bottom: 10px;
+    
 }
 .footer2 h2,
 .footer2 h2 a {
@@ -1648,6 +1689,7 @@ body.slide .oliven-nav-toggle {
     .footer2 {
         padding: 100px 30px 80px 30px;
         text-align: center;
+        
     }
 }
 
